# NDN-Video-Delivery

./: README.md
libdash/: README.md  README.md~
libdash/libdash/: Read
ndn-dash/: 199659.mpd  199659.mpd~  README.md~  b.mpd  bbb.mpd  bbb.mpd~  bbb2.mpd  bbb3.mpd  big_buck_bunny_480.mpd  big_buck_bunny_480.mpd~
ndn-dash/libdash/: CMakeLists.txt
ndn-dash/libdash/libdash/: CMakeLists.txt
ndn-dash/libdash/libdash/include/: IConnection.h
ndn-dash/libdash/libdash/source/network/: AbstractChunk.cpp  AbstractChunk.h
ndn-dash/libdash/libdash_networkpart_test/: HTTPConnection.cpp  HTTPConnection.h
ndn-dash/libdash/qtsampleplayer/: CMakeLists.txt  CMakeLists.txt~  log  log.cpp  main.cpp  qtsampleplayer.ui
ndn-dash/libdash/qtsampleplayer/Decoder/: LibavDecoder.cpp  LibavDecoder.h
ndn-dash/libdash/qtsampleplayer/Managers/: IMultimediaManagerBase.h  MultimediaManager.cpp  MultimediaManager.h  MultimediaStream.cpp  MultimediaStream.h
ndn-dash/libdash/qtsampleplayer/UI/: DASHPlayer.cpp  DASHPlayer.h  DASHPlayerNoGUI.cpp  DASHPlayerNoGUI.h  QtSamplePlayerGui.cpp  QtSamplePlayerGui.h
ndn-dash/libdash/qtsampleplayer/libdashframework/Adaptation/: AbstractAdaptationLogic.h  AdaptationLogicFactory.cpp  AdaptationLogicFactory.h  AlwaysLowestLogic.cpp  AlwaysLowestLogic.h  BufferBasedAdaptation.cpp  BufferBasedAdaptation.h  IAdaptationLogic.h  ManualAdaptation.cpp  ManualAdaptation.h  RateBasedAdaptation.cpp  RateBasedAdaptation.h
ndn-dash/libdash/qtsampleplayer/libdashframework/Buffer/: MediaObjectBuffer.cpp  MediaObjectBuffer.h
ndn-dash/libdash/qtsampleplayer/libdashframework/Input/: DASHManager.cpp  DASHManager.h  DASHReceiver.cpp  DASHReceiver.h  DASHReceiver.h~  IDASHManagerObserver.h  MediaObject.cpp  MediaObject.h  MediaObject.h~  MediaObjectDecoder.cpp  MediaObjectDecoder.h  NDNConnection.cpp  NDNConnection.cpp~  NDNConnection.h
(+23 files in other folders)
